@@ -117,7 +117,8 @@ public class CBCTags {
 			SHEET_STEEL = commonTag("sheet_steel", "plates/steel", "steel_plates"),
 			DUST_GLOWSTONE = commonTag("dust_glowstone", "dusts/glowstone", "glowstone_dusts"),
 			INEXPENSIVE_BIG_CARTRIDGE_SHEET = makeTag("inexpensive_big_cartridge_sheet"),
-			NITROPOWDER = makeTag("nitropowder");
+			NITROPOWDER = makeTag("nitropowder"),
+			BIG_CANNON_PROPELLANT = makeTag("big_cannon_propellant");
 
 		public static TagKey<Item> makeTag(String loc) {
 			TagKey<Item> tag = TagKey.create(Registry.ITEM_REGISTRY, CreateBigCannons.resource(loc));
@@ -181,6 +182,7 @@ public class CBCTags {
 			addIdsToItemTag(BLOCK_STEEL, alloyed("steel_block"));
 			addIdsToItemTag(BLOCK_CAST_IRON, createdeco("cast_iron_block"));
 			addTagsToItemTag(INEXPENSIVE_BIG_CARTRIDGE_SHEET, SHEET_GOLD, SHEET_COPPER);
+			addOptionalTagsToItemTag(BIG_CANNON_PROPELLANT, List.of(CreateBigCannons.resource("big_cannon_propellant_bags"), CreateBigCannons.resource("big_cannon_cartridges")));
 		}
 	}
 
