@@ -1,0 +1,7 @@
+{
+  "replace": false,
+  "values": [
+    "createbigcannons:ap_autocannon_round",
+    "createbigcannons:flak_autocannon_round"
+  ]
+}
