@@ -835,11 +835,19 @@ d5d42b74dd4c48cb96f9d4a08617f5687318dd34 data/createbigcannons/tags/blocks/reduc
 e231c3cbd5368cb85ea38d46cfe0d3eb135dd739 data/createbigcannons/tags/blocks/sandstone.json
 70b5d331a91aa5ff9df02ef384240c7be6e42da8 data/createbigcannons/tags/blocks/thick_tubing.json
 c76bf42ac6cc17e9d2c833ac9e92d549d96b2ea1 data/createbigcannons/tags/fluids/molten_metal.json
+288a99c8672cbdca4537573c97668ed367facf8c data/createbigcannons/tags/items/autocannon_ammo_containers.json
+b75d515595149b9e48f4af6bf4c097c68cb43e9b data/createbigcannons/tags/items/autocannon_cartridges.json
+e1fa683488d07e83263d3b0267b28384ac016480 data/createbigcannons/tags/items/autocannon_rounds.json
+4639ddbfb3702d5668560fa13159c0a6eb5744e9 data/createbigcannons/tags/items/big_cannon_cartridges.json
+2f9fa666b4ccfc3bc6fcb2de4d39914690583fbe data/createbigcannons/tags/items/big_cannon_projectiles.json
+107961a4ef532d92b4019db5dabb9cd93bd47a68 data/createbigcannons/tags/items/big_cannon_propellant.json
+c3ac3efee8c6a237e0d6376293c19c0a9d11b48c data/createbigcannons/tags/items/big_cannon_propellant_bags.json
 bbf5815fcc0a62f9a8805c6b4c7acdcc89946bdb data/createbigcannons/tags/items/block_bronze.json
 9462eb7ace972d15aa99bd0044816cc1663269b7 data/createbigcannons/tags/items/block_cast_iron.json
 2e2d145d3230414990e05461e580157ba314e904 data/createbigcannons/tags/items/block_steel.json
 30f33a8e3cc3672d18c82cc11163f07bab61a914 data/createbigcannons/tags/items/dust_glowstone.json
 5cab2d90a06f3a854b912e46ac444421b7f6e664 data/createbigcannons/tags/items/dusts_redstone.json
+0f754ebf1dd4bec306b79dd68cf1e9e029317fe3 data/createbigcannons/tags/items/fuzes.json
 1ab44dfd0e3c19477eae42984bff3d81def225d1 data/createbigcannons/tags/items/gems_quartz.json
 c1b54fe46bd631a83c385ed7defd56261c19d00b data/createbigcannons/tags/items/gunpowder.json
 b7d0a89d73e70c3273d08bcf2a7f2b46f2eff9ba data/createbigcannons/tags/items/impact_fuze_head.json
@@ -859,6 +867,7 @@ d9e6c7a4955e85b458a6803caf95b06e4cdd068e data/createbigcannons/tags/items/sheet_
 ee48da3a9f82e46ab6cfb52855d5709219e17c4f data/createbigcannons/tags/items/sheet_copper.json
 8ef1e0e5650083d077b88955fd047a1a99f15cd8 data/createbigcannons/tags/items/sheet_iron.json
 bee858697dec0aa1fa2245815afd723e3163306b data/createbigcannons/tags/items/sheet_steel.json
+f4276e1b3f0c1f0e3d545c6a16b5deaedb406c73 data/createbigcannons/tags/items/spent_autocannon_casings.json
 02a061857a57ffaa1236c59e6ac877124c5720d5 data/createbigcannons/tags/items/stone.json
 19a8203055aaded163288b6e680826ca3435e060 data/forge/tags/fluids/molten_bronze.json
 03f523c9dcb51b1f72e2d7045df53c08c15febe0 data/forge/tags/fluids/molten_cast_iron.json
